kubernetes/dz1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: poznaninlp/otus_homework:1.1
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 15
            periodSeconds: 20
