kubernetes/dz1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress-ext
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/poznanin/(.*)
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 9000
          - path: /(health)
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 9000
